# esame-B024260

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
controllers/: ImageUploader.cpp  ImageUploader.h
interfaces/: Observer.h  Subject.h
models/: Image.h  ImagesDatabase.cpp  ImagesDatabase.h
tests/: CMakeLists.txt  Image.cpp  ImageDatabase.cpp  ImageUploader.cpp  MvcPattern.cpp
views/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
views/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
